--- a/static/index.html
+++ b/static/index.html
@@ -73,14 +73,14 @@ pre.curd {
       });
 
       socket.on('redis', function (data) {
-        doLog('redis MONITOR:\n' + data, 'redis');
+        doLog('redis MONITOR:\n' + JSON.stringify(data, null, 2), 'redis');
       });
 
       // CURD over socket
-      // socket.emit('GET', 'redisfire-test/feed/entry/2/author/name', {foo:'bar'});
-      // socket.emit('POST', 'redisfire-test/feed/entry/2/author/name2', {hello: 'WORLD'}, {foo:'bar'});
-      // socket.emit('DELETE', 'redisfire-test/feed/entry/2/author/name2', {foo:'bar'});
-      // socket.emit('PUT', 'redisfire-test/feed/entry/2/author', {name: 'Jongsoon'}, {foo:'bar'});
+      // socket.emit('GET', 'theverge/feed/entry/2/author/name', {foo:'bar'});
+      // socket.emit('POST', 'theverge/feed/entry/2/author/name2', {hello: 'WORLD'}, {foo:'bar'});
+      // socket.emit('DELETE', 'theverge/feed/entry/2/author/name2', {foo:'bar'});
+      // socket.emit('PUT', 'theverge/feed/entry/2/author', {name: 'Jongsoon'}, {foo:'bar'});
 
       setTimeout(function() {
           doLog(JSON.stringify({
