--- a/static/index.html
+++ b/static/index.html
@@ -77,10 +77,11 @@ pre.curd {
       });
 
       // CURD over socket
-      // socket.emit('GET', 'theverge/feed/entry/2/author/name', {foo:'bar'});
-      // socket.emit('POST', 'theverge/feed/entry/2/author/name2', {hello: 'WORLD'}, {foo:'bar'});
-      // socket.emit('DELETE', 'theverge/feed/entry/2/author/name2', {foo:'bar'});
-      // socket.emit('PUT', 'theverge/feed/entry/2/author', {name: 'Jongsoon'}, {foo:'bar'});
+      var curl_over_socket = "// socket.emit('GET', 'theverge/feed/entry/2/author/name', {foo:'bar'}); \n";
+      curl_over_socket+= "// socket.emit('POST', 'theverge/feed/entry/2/author/name2', {hello: 'WORLD'}, {foo:'bar'}); \n";
+      curl_over_socket+= "// socket.emit('DELETE', 'theverge/feed/entry/2/author/name2', {foo:'bar'}); \n";
+      curl_over_socket+= "// socket.emit('PUT', 'theverge/feed/entry/2/author', {name: 'Jongsoon'}, {foo:'bar'}); \n";
+      doLog('CURD over socket - try this on javascript console: \n' + curl_over_socket);
 
       setTimeout(function() {
           doLog(JSON.stringify({
